--- a/Web/Login.html
+++ b/Web/Login.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <link rel="icon" href="Image/Icon.png">
@@ -11,17 +10,16 @@
     <body>
         <div class = "container">
             <img src = "Image/logo-sekolah.png">
-            <form>
+            <form action = "Page/Dashboard.html">
                 <label class="nip">NIP</label>
                 <input type="text" maxlength="16" name="nip"><br>
                 <label class="password">Kata Sandi</label>
-                <input type="password" name="password"><br>
-                <div class = "box-btn">
-                    <div class = "btn">
-                        <input id="submit-btn" type="submit" name="submit" value="Masuk" class="text"/>
-                    </div>
-                </div>
+                <input type="password" name="password">
+                <button type="submit">Masuk</button>
             </form>
+        </div>
+        <div class = "footer">
+            <p>Copyright © 2021 Sekolah Daarul Jannah</p>
         </div>
     </body>
 </html>
