--- a/Web/Login.html
+++ b/Web/Login.html
@@ -1,25 +1,47 @@
-<html>
-    <head>
-        <link rel="icon" href="Image/Icon.png">
-        <link rel="stylesheet" href="CSS/login-style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-        <title>Login Page</title>
-    </head>
-    <body>
-        <div class = "container">
-            <img src = "Image/logo-sekolah.png">
-            <form action = "Page/Dashboard.html">
-                <label class="nip">NIP</label>
-                <input type="text" maxlength="16" name="nip"><br>
-                <label class="password">Kata Sandi</label>
-                <input type="password" name="password">
-                <button type="submit">Masuk</button>
-            </form>
-        </div>
-        <div class = "footer">
-            <p>Copyright © 2021 Sekolah Daarul Jannah</p>
-        </div>
-    </body>
+<!doctype html>
+<html lang="en">
+  <head>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--CSS Custom-->
+    <link rel="stylesheet" href="CSS/style.css">
+
+    <title>Login Page</title>
+    <link rel="icon" type="image/png" href="Image/Icon1.png">
+    
+  </head>
+  <body>
+    <div class="global-container">
+      <div class="card login-form">
+        <form>
+          <div class="card-body">
+            <img src="Image/logo-sekolah.png" class = "img"><hr>
+          </div>
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan NIP">
+              <label for="floatingInput">NIP</label>
+            </div>
+            <div class="form-floating">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Kata Sandi</label>
+            </div>
+              <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+      </div>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+  </body>
 </html>
