--- a/Web/login-page.html
+++ b/Web/login-page.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -21,7 +25,8 @@
       <div class="card login-form">
         <form>
           <div class="card-body">
-            <img src="Image/logo-sekolah.png" class = "img"><hr>
+            <img src="Image/logo-sekolah.png" class = "img">
+            
           </div>
             <div class="form-floating mb-3">
               <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan NIP">
@@ -32,7 +37,7 @@
               <label for="floatingPassword">Kata Sandi</label>
             </div>
               <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn">Masuk</button>
             </div>
         </form>
       </div>
