--- a/Web/login-page.html
+++ b/Web/login-page.html
@@ -26,7 +26,6 @@
         <form>
           <div class="card-body">
             <img src="Image/logo-sekolah.png" class = "img">
-            
           </div>
             <div class="form-floating mb-3">
               <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan NIP">
@@ -42,6 +41,14 @@
         </form>
       </div>
     </div>
+
+    <footer class="bg-light text-center text-lg-start footer">
+      <!-- Copyright -->
+      <div class="text-left p-3">
+        Copyright © 2021 Sekolah Daarul Jannah
+      </div>
+      <!-- Copyright -->
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
