--- a/Web/dashboard.html
+++ b/Web/dashboard.html
@@ -17,14 +17,23 @@
         <link rel="stylesheet" href="CSS/dashboard.css">
 
         <link rel="icon" type="image/png" href="Image/Icon1.png">
+        <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
+        
     </head>
 
     <body>
-        <!-- Image and text -->
+        <!-- Header -->
         <nav class="navbar navbar-light header">
-            <a class="navbar-brand">
-            <img src="Image/logo-sekolah.png" width="40" height="40" class="d-inline-block align-top" alt="">
+            <a>
+            <button class ="box-menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
+            <img src="Image/logo-sekolah.png" width="40" height="40" class="d-inline-block" alt="">
             </a>
+            <div class="user-box">
+                <i class="fas fa-user-circle id"></i>
+                <div class="id">
+                    <p class = "nama">Andy Rusman<br>018273282</p>
+                </div>
+            </div>
         </nav>
 
         <h1 class = "text-center h1">Sistem Cek Pembayaran<br>Sekolah Daarul Jannah</h1>
