--- a/Web/ubahdata.html
+++ b/Web/ubahdata.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Cek Pembayaran - Sistem Pembayaran DJ</title>
+        <title>Dashboard - Sistem Pembayaran DJ</title>
         <!--Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,18 +14,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
         <!-- CSS Custom -->
-        <link rel="stylesheet" href="CSS/cek.css">
+        <link rel="stylesheet" href="CSS/ubahdata.css">
 
         <link rel="icon" type="image/png" href="Image/Icon1.png">
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
-
     </head>
 
     <body>
         <!-- Header -->
         <nav class="navbar navbar-light header">
             <a>
-            <button class ="box-menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
+            <button class ="box-menu"><i class="fas fa-bars"></i></button>
             <img src="Image/logo-sekolah.png" width="40" height="40" class="d-inline-block" alt="">
             </a>
             <div class="user-box">
@@ -38,21 +37,8 @@
 
         <h1 class = "text-center h1">Sistem Cek Pembayaran<br>Sekolah Daarul Jannah</h1>
 
-        <!--Search Bar-->
-        <form action="tabel-pembayaran.html">
-                <div class="input-group mb-3 searchbar-pos mx-auto">
-                <span class="input-group-addon card shadow">
-                    <img src="Image/eva_search-fill.png">
-                </span>
-                <input type="text" class="form-control searchbar" placeholder="Ketik NIS atau Nama Siswa" aria-label="nis-siswa" aria-describedby="basic-addon2">
-                <div class="input-group-append">
-                <button class="btn btn-success shadow" type="button">Cari</button>
-                </div>
-            </div>
-        </form>
-
-        <!-- Footer -->
         <footer class="bg-light text-center text-lg-start footer">
+            <!-- Copyright -->
             <div class="text-left p-3">
               Copyright © 2021 Sekolah Daarul Jannah
             </div>
